javapackager fails to create Mac Application Bundle

XMLWordPrintable

    • 9
    • x86
    • os_x

      The creation of the app bundle always fails with java.nio.file.NoSuchFileException for the dependency jars. This same command line works when running with Java 8.
      The files are in the srcdir, but they aren't getting copied into the bundle.

      javapackager -deploy -native pkg -daemon -v -title PackagerTest -vendor "Some Company" -srcdir /Users/scott/dev/Personal/PackagerTest/build/dist -outdir /Users/scott/dev/Personal/PackagerTest/build/pkg -outfile PackagerTest -name PackagerTest -appclass Main -BuserJvmOptions=-Xmx=512m -BjvmProperties=java.util.logging.config.file=conf/logging.properties -BappVersion=1.0, -BmainJar=PackagerTest-1.0-SNAPSHOT.jar -BlicenseType=Proprietary -Bcategory=AudioVideo -BapplicationCategory=AudioVideo -BsystemWide=true -BrunAtStartup=true -BstartOnInstall=true -BstopOnUninstall=true -srcfiles lib/commons-lang-2.6.jar:PackagerTest-1.0-SNAPSHOT.jar

      Building PKG package for PackagerTest
      Module jdk.jvmstat does not exist.
      Module jdk.management.agent does not exist.
      Module java.management.rmi does not exist.
      Module jdk.vm.ci does not exist.
      "Adding modules: [java.rmi, jdk.charsets, java.xml, jdk.xml.dom, java.datatransfer, jdk.httpserver, javafx.base, java.desktop, java.security.sasl, jdk.zipfs, java.base, jdk.crypto.ec, java.sql.rowset, javafx.swing, jdk.jsobject, jdk.sctp, java.smartcardio, jdk.unsupported, jdk.scripting.nashorn, java.security.jgss, java.compiler, javafx.graphics, javafx.fxml, jdk.dynalink, javafx.media, jdk.accessibility, jdk.security.jgss, java.sql, javafx.web, java.logging, java.xml.crypto, jdk.jfr, jdk.packager.services, jdk.net, java.naming, javafx.controls, java.prefs, jdk.naming.rmi, java.management, jdk.jdwp.agent, java.instrument, jdk.management, jdk.security.auth, java.scripting, jdk.naming.dns, jdk.localedata] to runtime image."
      outputDir = /var/folders/kk/4_0w_68n6q3cjf0hnwd9ydf00000gn/T/fxbundler14899222237512663805/images/image-2929647823852616897/PackagerTest.app/Contents/PlugIns/Java.runtime/Contents/Home
      modulePath = [/Library/Java/JavaVirtualMachines/jdk-9.jdk/Contents/Home/jmods]
      addModules = [java.rmi, jdk.charsets, java.xml, jdk.xml.dom, java.datatransfer, jdk.httpserver, javafx.base, java.desktop, java.security.sasl, jdk.zipfs, java.base, jdk.crypto.ec, java.sql.rowset, javafx.swing, jdk.jsobject, jdk.sctp, java.smartcardio, jdk.unsupported, jdk.scripting.nashorn, java.security.jgss, java.compiler, javafx.graphics, javafx.fxml, jdk.dynalink, javafx.media, jdk.accessibility, jdk.security.jgss, java.sql, javafx.web, java.logging, java.xml.crypto, jdk.jfr, jdk.packager.services, jdk.net, java.naming, javafx.controls, java.prefs, jdk.naming.rmi, java.management, jdk.jdwp.agent, java.instrument, jdk.management, jdk.security.auth, java.scripting, jdk.naming.dns, jdk.localedata]
      limitModules = []
      excludeFileList = .*\.diz
      stripNativeCommands = true
      userArguments = {}
      java.nio.file.NoSuchFileException: /var/folders/kk/4_0w_68n6q3cjf0hnwd9ydf00000gn/T/fxbundler14899222237512663805/images/image-2929647823852616897/PackagerTest.app/Contents/Java/lib/commons-lang-2.6.jar
      java.nio.file.NoSuchFileException: /var/folders/kk/4_0w_68n6q3cjf0hnwd9ydf00000gn/T/fxbundler14899222237512663805/images/image-2929647823852616897/PackagerTest.app/Contents/Java/lib/commons-lang-2.6.jar
              at java.base/sun.nio.fs.UnixException.translateToIOException(UnixException.java:92)
              at java.base/sun.nio.fs.UnixException.rethrowAsIOException(UnixException.java:111)
              at java.base/sun.nio.fs.UnixException.rethrowAsIOException(UnixException.java:116)
              at java.base/sun.nio.fs.UnixCopyFile.copyFile(UnixCopyFile.java:248)
              at java.base/sun.nio.fs.UnixCopyFile.copy(UnixCopyFile.java:586)
              at java.base/sun.nio.fs.UnixFileSystemProvider.copy(UnixFileSystemProvider.java:254)
              at java.base/java.nio.file.Files.copy(Files.java:1277)
              at jdk.packager/jdk.packager.builders.mac.MacAppImageBuilder.copyClassPathEntries(MacAppImageBuilder.java:457)
              at jdk.packager/jdk.packager.builders.mac.MacAppImageBuilder.prepareApplicationFiles(MacAppImageBuilder.java:387)
              at jdk.packager/jdk.packager.internal.JLinkBundlerHelper.execute(JLinkBundlerHelper.java:352)
              at jdk.packager/com.oracle.tools.packager.mac.MacAppBundler.doBundle(MacAppBundler.java:359)
              at jdk.packager/com.oracle.tools.packager.mac.MacBaseInstallerBundler.prepareAppBundle(MacBaseInstallerBundler.java:211)
              at jdk.packager/com.oracle.tools.packager.mac.MacPkgBundler.bundle(MacPkgBundler.java:144)
              at jdk.packager/com.oracle.tools.packager.mac.MacPkgBundler.execute(MacPkgBundler.java:575)
              at jdk.packager/com.sun.javafx.tools.packager.PackagerLib.generateNativeBundles(PackagerLib.java:371)
              at jdk.packager/com.sun.javafx.tools.packager.PackagerLib.generateDeploymentPackages(PackagerLib.java:348)
              at jdk.packager/com.sun.javafx.tools.packager.Main.main(Main.java:496)
      Config files are saved to /var/folders/kk/4_0w_68n6q3cjf0hnwd9ydf00000gn/T/fxbundler14899222237512663805/macosx. Use them to customize package.
      Exception in thread "main" com.sun.javafx.tools.packager.PackagerException: Error: Bundler "PKG Installer" (pkg) failed to produce a bundle.
              at jdk.packager/com.sun.javafx.tools.packager.PackagerLib.generateNativeBundles(PackagerLib.java:374)
              at jdk.packager/com.sun.javafx.tools.packager.PackagerLib.generateDeploymentPackages(PackagerLib.java:348)
              at jdk.packager/com.sun.javafx.tools.packager.Main.main(Main.java:496)

            Assignee:
            Victor Drozdov (Inactive)
            Reporter:
            Scott Palmer
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: