8179033: javapackager fails to create Mac Application Bundle Reviewed-by: kcr